--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-<h1>adithi</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Adithi10</h1>
+    <h2>My Projects</h2>
+    <ol>
+        <li><a href="#">Project 1</a></li>
+        <li><a href="#">Project 2</a></li>
+        <li><a href="#">Project 3</a></li>
+    </ol>
+    <h2>Assignments</h2>
+    <ol>
+        <li><a href="a1">Assignment 1</a></li>
+        <li><a href="a2">Assignment 2</a></li>
+
+    </ol>
+
+</body>
+</html>
