--- a/index.html
+++ b/index.html
@@ -6,20 +6,26 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Adithi10</h1>
+    <h1>Adithi</h1>
     <h2>My Projects</h2>
     <ol>
         <li><a href="#">Project 1</a></li>
-        <li><a href="#">Project 2</a></li>
+        <li><a href="p2">Project 2</a></li>
         <li><a href="#">Project 3</a></li>
     </ol>
     <h2>Assignments</h2>
     <ol>
         <li><a href="a1">Assignment 1</a></li>
         <li><a href="a2">Assignment 2</a></li>
-        <li><a href="a3">Assignement 3</a></li>
-        <li><a href="a4">Assignement 4</a></li>
-         <li><a href="a5">Assignement 5</a></li>
+        <li><a href="a3">Assignment 3</a></li>
+        <li><a href="a4">Assignment 4</a></li>
+        <li><a href="a5">Assignment 5</a></li>
+        <li><a href="a6">Assignment 6</a></li>
+        <li><a href="a7">Assignment 7</a></li>
+        <li><a href="a8">Assignment 8</a></li>
+
+
+
 
     </ol>
 
