--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Adithi Poddutoori</h1>
     <h2>My Projects</h2>
     <ol>
-        <li><a href="p1">Project 1</a></li>
+        <li><a href="p1/index.html">Project 1</a></li>
         <li><a href="p2">Project 2</a></li>
         <li><a href="#">Project 3</a></li>
     </ol>
