--- a/p1/index.html
+++ b/p1/index.html
@@ -60,7 +60,7 @@
           </div>
 
           <div class="box">
-            <h3>Project 2</h3>
+            <h3> <a href="https://mu-react-store-sepia-one.vercel.app/">Project 2</a></h3>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
               quia nobis eligendi reiciendis. Esse a possimus eum est veritatis
